LayoutTests:

Reviewed by Darin.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=12590
          REGRESSION: Text selection is weird in textareas in Trac wiki editing pages

        * fast/repaint/selection-gap-overflow-scroll-expected.checksum: Added.
        * fast/repaint/selection-gap-overflow-scroll-expected.png: Added.
        * fast/repaint/selection-gap-overflow-scroll-expected.txt: Added.
        * fast/repaint/selection-gap-overflow-scroll.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12590
          REGRESSION: Text selection is weird in textareas in Trac wiki editing pages

        Test: fast/repaint/selection-gap-overflow-scroll.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::selectionGapRects): Adjust for overflow scroll.



Canonical link: https://commits.webkit.org/16323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19413 268f45cc-cd09-0410-ab3c-d52691b4dbfc