WebCore/rendering/RenderBlock.cpp
@@ -1617,7 +1617,9 @@ GapRects RenderBlock::selectionGapRects()
 
     int tx, ty;
     absolutePositionForContent(tx, ty);
-    
+    if (hasOverflowClip())
+        layer()->subtractScrollOffset(tx, ty);
+
     int lastTop = -borderTopExtra();
     int lastLeft = leftSelectionOffset(this, lastTop);
     int lastRight = rightSelectionOffset(this, lastTop);
